deploy/public/css/styles.css
/* ... */
footer .inner div a.cta {
  color: #fff;
  padding: 11px 5px 12px 5px;
  background: inherit;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
footer .inner div a.cta:hover {
  color: #000;
  background: #fff;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
footer .inner div a .rva-plus {
  font-size: 13px;
}
footer .inner div:first-of-type {
  margin-left: 10px;
}
@font-face {
  font-family: 'rva-icon';
  src: url("../fonts/rva-icon.eot");
  src: url("../fonts/rva-icon.eot?#iefix") format("embedded-opentype"), url("../fonts/rva-icon.woff") format("woff"), url("../fonts/rva-icon.ttf") format("truetype"), url("../fonts/rva-icon.svg#rva-icon") format("svg");
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "rvamakes";
  src: url("../fonts/rvamakes.eot");
  src: url("../fonts/rvamakes.eot?#iefix") format("embedded-opentype"), url("../fonts/rvamakes.woff") format("woff"), url("../fonts/rvamakes.ttf") format("truetype"), url("../fonts/rvamakes.svg#rvamakes") format("svg");
  font-weight: normal;
  font-style: normal;
}
/* Use the following CSS code if you want to use data attributes for inserting your icons */
[data-icon]:before {
  font-family: 'rva-icon';
  content: attr(data-icon);
  speak: none;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
/* Use the following CSS code if you want to have a class per icon */
/*
Instead of a list of all class selectors,
you can use the generic selector below, but it's slower:
[class*="rva-"] {
*/
.rva-RVAlogo_v2,
.rva-RVAlogo_v1 {
  font-family: 'rva-icon';
  color: #000000;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
.rva-RVAlogo_v2:before {
  content: "\52";
}
.rva-RVAlogo_v1:before {
  content: "\72";
}
.rva-logo,
.rva-arrow-down,
.rva-plus {
  font-family: 'rvamakes';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
.rva-logo:before {
  content: "\31";
}
.rva-arrow-down:before {
  content: "\32";
}
.rva-plus:before {
  content: "\2b";
}
@media (min-width: 1225px) {
  header .inner,
  footer .inner {
    width: 1225px;
  }
  header .inner .selector .prefix {
    color: #777;
    float: left;
    line-height: 87px;
  }
  header .inner .selector .prefix span {
    font-size: 76px;
  }
  header .inner .selector .current {
    margin-top: -2px;
    font-size: 105px;
  }
  header .inner .selector .fob span {
    font-size: 45px;
  }
  header .inner .options {
    left: 235px;
    width: 980px;
  }
  header .inner .options div {
    width: 450px;
    line-height: 45px;
    font-size: 45px;
  }
  section {
    width: 1225px;
  }
}
@media (min-width: 768px) and (max-width: 979px) {
  header .inner,
  footer .inner {
    width: 735px;
  }
  header .inner .selector .prefix {
    line-height: 55px;
  }
  header .inner .selector .prefix span {
    font-size: 46px;
  }
  header .inner .selector .current {
    font-size: 64px;
    margin: -4px;
  }
  header .inner .options {
    left: 0;
    width: 735px;
  }
  header .inner .options div {
    width: 327px;
    line-height: 40px;
    font-size: 30px;
  }
  section {
    width: 735px;
  }
}
@media (max-width: 767px) {
  header .inner,
  footer .inner {
    width: 100%;
  }
  header {
    height: 50px;
    border-bottom: 1px solid #efefef;
  }
  header .inner {
    padding-top: 0px;
  }
  header .inner .selector .prefix,
  header .inner .selector .current,
  header .inner .selector .fob {
    line-height: 50px;
  }
  header .inner .selector .prefix {
    line-height: 5px;
  }
  header .inner .selector .prefix span {
    font-size: 24px;
  }
  header .inner .selector .current {
    font-size: 35px;
    margin: -2px;
  }
  header .inner .selector .fob {
    width: 50px;
    margin-right: 0px;
    line-height: 28px;
  }
  header .inner .selector .fob span {
    font-size: 25px;
  }
  header .inner .options {
    top: 50px;
    left: 0;
    width: 100%;
  }
  header .inner .options div {
    width: 46%;
    line-height: 40px;
    font-size: 24px;
    padding: 5px 2%;
  }
  section {
    padding-top: 20px;
    width: 490px;
  }
}
@media (max-width: 492px) {
  header .inner .selector .prefix,
  header .inner .selector .current,
  header .inner .selector .fob {
    line-height: 50px;
  }
  header .inner .selector .prefix {
    line-height: 1px;
  }
  header .inner .selector .prefix span {
    font-size: 20px;
  }
  header .inner .selector .current {
    font-size: 28px;
    margin-top: -2px;
    margin-left: 1px;
  }
  header .inner .selector .fob {
    width: 50px;
    margin-right: 0px;
    line-height: 28px;
  }
  header .inner .selector .fob span {
    font-size: 25px;
  }
  header .inner .options div {
    font-size: 20px;
  }
  section {
    padding-top: 20px;
    width: 225px;
  }
  #list .item {
    padding: 0;
    margin: 0 0 20px;
  }
  footer .inner div {
    margin-right: 28px;
  }
}
.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}
.clearfix:after {
  clear: both;
}

